@@ -2,31 +2,37 @@
 
 cd `dirname $0`
 cd ..
-HOE=`pwd`
-    export DWS_ENTRANCE_HOE=$HOE
+HOME=`pwd`
 
-export DWS_ENTRANCE_PID=$HOE/bin/linkis-entrance.pid
+export SERVER_PID=$HOME/bin/linkis.pid
+export SERVER_LOG_PATH=$HOME/logs
+export SERVER_CLASS=com.webank.wedatasphere.linkis.DataWorkCloudApplication
 
-if [[ -f "${DWS_ENTRANCE_PID}" ]]; then
-    pid=$(cat ${DWS_ENTRANCE_PID})
+if test -z "$SERVER_HEAP_SIZE"
+then
+  export SERVER_HEAP_SIZE="512M"
+fi
+
+if test -z "$SERVER_JAVA_OPTS"
+then
+  export SERVER_JAVA_OPTS=" -Xmx$SERVER_HEAP_SIZE -XX:+UseG1GC -Xloggc:$HOME/logs/linkis-gc.log"
+fi
+
+if [[ -f "${SERVER_PID}" ]]; then
+    pid=$(cat ${SERVER_PID})
     if kill -0 ${pid} >/dev/null 2>&1; then
-      echo "Entrance is already running."
-      return 0;
+      echo "Server is already running."
+      exit 1
     fi
 fi
 
-export DWS_ENTRANCE_LOG_PATH=$HOE/logs
-export DWS_ENTRANCE_DEBUG="-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=10059"
-export DWS_ENTRANCE_HEAP_SIZE="2G"
-export DWS_ENTRANCE_JAVA_OPTS="-Xms$DWS_ENTRANCE_HEAP_SIZE -Xmx$DWS_ENTRANCE_HEAP_SIZE -XX:+UseG1GC -XX:MaxPermSize=500m $DWS_ENTRANCE_DEBUG"
-
-nohup java $DWS_ENTRANCE_JAVA_OPTS -cp $HOE/conf:$HOE/lib/* com.webank.wedatasphere.linkis.DataWorkCloudApplication 2>&1 > $DWS_ENTRANCE_LOG_PATH/linkis-shellentrance.out &
+nohup java $SERVER_JAVA_OPTS -cp $HOME/conf:$HOME/lib/* $SERVER_CLASS 2>&1 > $SERVER_LOG_PATH/linkis.out &
 pid=$!
 if [[ -z "${pid}" ]]; then
-    echo "Dataworkcloud Entrance start failed!"
+    echo "server $SERVER_NAME start failed!"
     exit 1
 else
-    echo "Dataworkcloud Entrance start succeeded!"
-    echo $pid > $DWS_ENTRANCE_PID
+    echo "server $SERVER_NAME start succeeded!"
+    echo $pid > $SERVER_PID
     sleep 1
 fi
